@@ -412,7 +412,10 @@
 	define('GROUP_GUI_ACCESS_DISABLED',	2);
 
 	define('GROUP_API_ACCESS_DISABLED', 0);
-	define('GROUP_API_ACCESS_ENABLED', 1);
+	define('GROUP_API_ACCESS_ENABLED', 1)
+;
+	define('GROUP_DEBUG_MODE_DISABLED',	0);
+	define('GROUP_DEBUG_MODE_ENABLED',	1);
 
 	define('PERM_MAX',		3);
 	define('PERM_READ_WRITE',	3);
