@@ -1438,6 +1438,8 @@
 	'S_CANNOT_UPDATE_GUI_ACCESS'=>			'Cannot update GUI access',
 	'S_API_ACCESS_UPDATED'=>			'API access updated',
 	'S_CANNOT_UPDATE_API_ACCESS'=>			'Cannot update API access',
+	'S_DEBUG_MODE_UPDATED'=>			'Debug mode updated',
+	'S_CANNOT_UPDATE_DEBUG_MODE'=>			'Cannot update debug mode',
 	'S_USER_CANNOT_DISABLE_ITSELF'=>		'User cannot disable itself',
 	'S_USER_CANNOT_CHANGE_STATUS'=>			'User cannot change status to itself',
 	'S_USER_CANNOT_CHANGE_GUI_ACCESS'=>		'User cannot change GUI access to itself',
@@ -1456,6 +1458,9 @@
 	'S_RIGHTS'=>					'Rights',
 	'S_GUI_ACCESS'=>				'GUI access',
 	'S_API_ACCESS'=>				'API access',
+	'S_DEBUG'=>					'Debug',
+	'S_DEBUG_MODE'=>				'Debug mode',
+	'S_USERS_STATUS'=>				'Users status',
 	'S_USERS_STATUS'=>				'Users status',
 	'S_NO_RIGHTS_DEFINED'=>				'No rights defined',
 	'S_READ_ONLY'=>					'Read only',
