@@ -1,5 +1,6 @@
 Changes for 1.7.0
 
+ - [DEV-403] added Debug mode for user groups in order to simplify GUI troubleshooting (Alexei)
  - [ZBX-773] fixed typo 'attribures' (Richlv)
  - [ZBX-974] recompressed most frontend images with pngcrush (Richlv)
  - [DEV-400] added necessary link between hosts and groups (Artem)
